--- a/bsip/bsip/Base.lproj/Main.storyboard
+++ b/bsip/bsip/Base.lproj/Main.storyboard
@@ -160,10 +160,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-a3-pJx">
-                                <rect key="frame" x="149.66666666666666" y="654" width="94" height="44"/>
+                                <rect key="frame" x="149.66666666666666" y="658" width="94" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="EzL-Iy-qla"/>
-                                    <constraint firstAttribute="height" constant="44" id="hqu-dw-faS"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="EzL-Iy-qla"/>
+                                    <constraint firstAttribute="height" constant="80" id="hqu-dw-faS"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="ringoff" imagePlacement="top" subtitle="取消">
@@ -175,10 +175,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yeo-QD-Cdl">
-                                <rect key="frame" x="20" y="654" width="94" height="44"/>
+                                <rect key="frame" x="20" y="658" width="94" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="3CR-YK-hBD"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="hjk-wm-Dg9"/>
+                                    <constraint firstAttribute="height" constant="80" id="3CR-YK-hBD"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="hjk-wm-Dg9"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="microphone_o" imagePlacement="top" title="麦克已开">
@@ -190,10 +190,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Znt-yF-qQm">
-                                <rect key="frame" x="269" y="654" width="104" height="44"/>
+                                <rect key="frame" x="269" y="658" width="104" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="00J-nw-E0l"/>
-                                    <constraint firstAttribute="height" constant="44" id="XeW-dE-EPk"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="00J-nw-E0l"/>
+                                    <constraint firstAttribute="height" constant="80" id="XeW-dE-EPk"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="speaker_c" imagePlacement="top" title="扬声器已关">
@@ -209,13 +209,13 @@
                         <color key="backgroundColor" systemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Yeo-QD-Cdl" firstAttribute="leading" secondItem="z99-Zh-aj6" secondAttribute="leading" constant="20" id="Ce4-z8-Pcd"/>
-                            <constraint firstItem="trV-C0-Fe4" firstAttribute="bottom" secondItem="Sih-a3-pJx" secondAttribute="bottom" constant="120" id="NXL-1s-rkF"/>
+                            <constraint firstItem="trV-C0-Fe4" firstAttribute="bottom" secondItem="Sih-a3-pJx" secondAttribute="bottom" constant="80" id="NXL-1s-rkF"/>
                             <constraint firstItem="Znt-yF-qQm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Sih-a3-pJx" secondAttribute="trailing" constant="8" symbolic="YES" id="SVw-er-bY1"/>
                             <constraint firstItem="Sih-a3-pJx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Yeo-QD-Cdl" secondAttribute="trailing" constant="8" symbolic="YES" id="lXy-VP-yj9"/>
                             <constraint firstAttribute="trailing" secondItem="Znt-yF-qQm" secondAttribute="trailing" constant="20" id="nLh-aj-gfl"/>
-                            <constraint firstItem="trV-C0-Fe4" firstAttribute="bottom" secondItem="Znt-yF-qQm" secondAttribute="bottom" constant="120" id="pYr-cg-l3o"/>
+                            <constraint firstItem="trV-C0-Fe4" firstAttribute="bottom" secondItem="Znt-yF-qQm" secondAttribute="bottom" constant="80" id="pYr-cg-l3o"/>
                             <constraint firstItem="Sih-a3-pJx" firstAttribute="centerX" secondItem="z99-Zh-aj6" secondAttribute="centerX" id="rNi-yS-nRe"/>
-                            <constraint firstItem="trV-C0-Fe4" firstAttribute="bottom" secondItem="Yeo-QD-Cdl" secondAttribute="bottom" constant="120" id="rru-Xs-U0v"/>
+                            <constraint firstItem="trV-C0-Fe4" firstAttribute="bottom" secondItem="Yeo-QD-Cdl" secondAttribute="bottom" constant="80" id="rru-Xs-U0v"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PyA-9t-kzP"/>
@@ -232,25 +232,48 @@
         <scene sceneID="mhB-VR-PFm">
             <objects>
                 <viewController restorationIdentifier="UIVideoViewController" storyboardIdentifier="UIVideoViewController" id="v2H-k9-GkB" customClass="UIVideoViewController" customModule="bsip" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bZ-wb-sg2">
+                    <view key="view" contentMode="scaleToFill" id="8bZ-wb-sg2" customClass="SampleBufferVideoCallView" customModule="bsip" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IG5-PX-zcX">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sKA-x4-66P" customClass="SampleBufferVideoCallView" customModule="bsip" customModuleProvider="target">
+                                <rect key="frame" x="20" y="79" width="180" height="240"/>
+                                <color key="backgroundColor" systemColor="underPageBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="OJu-nK-mNW"/>
+                                    <constraint firstAttribute="width" secondItem="sKA-x4-66P" secondAttribute="height" multiplier="3:4" id="S1e-fa-JFN"/>
+                                </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZCv-yU-3q6">
+                                <rect key="frame" x="149.66666666666666" y="631.33333333333337" width="94" height="106.66666666666663"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="WCs-LW-k3W"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="xa0-v0-RTR"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="ringoff" imagePlacement="top" title="取消">
+                                    <fontDescription key="titleFontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="endCall:" destination="v2H-k9-GkB" eventType="touchUpInside" id="sSb-9E-5Q8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="RxM-eO-1Vf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="RxM-eO-1Vf" firstAttribute="trailing" secondItem="IG5-PX-zcX" secondAttribute="trailing" id="X2C-6g-6qe"/>
-                            <constraint firstItem="RxM-eO-1Vf" firstAttribute="bottom" secondItem="IG5-PX-zcX" secondAttribute="bottom" id="Xp4-UI-mId"/>
-                            <constraint firstItem="IG5-PX-zcX" firstAttribute="leading" secondItem="RxM-eO-1Vf" secondAttribute="leading" id="bsJ-2q-Efe"/>
-                            <constraint firstItem="IG5-PX-zcX" firstAttribute="top" secondItem="RxM-eO-1Vf" secondAttribute="top" id="e0n-ik-Urm"/>
+                            <constraint firstItem="sKA-x4-66P" firstAttribute="leading" secondItem="RxM-eO-1Vf" secondAttribute="leading" constant="20" id="1Dg-1R-HF0"/>
+                            <constraint firstItem="RxM-eO-1Vf" firstAttribute="bottom" secondItem="ZCv-yU-3q6" secondAttribute="bottom" constant="80" id="2TS-vf-Pbs"/>
+                            <constraint firstItem="ZCv-yU-3q6" firstAttribute="centerX" secondItem="8bZ-wb-sg2" secondAttribute="centerX" id="Bi3-eo-KMQ"/>
+                            <constraint firstItem="sKA-x4-66P" firstAttribute="top" secondItem="RxM-eO-1Vf" secondAttribute="top" constant="20" id="qCX-ow-hvJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xQt-dn-OlU"/>
+                    <connections>
+                        <outlet property="backGroundVideoView" destination="8bZ-wb-sg2" id="FIw-Pc-bA7"/>
+                        <outlet property="topFrontVideoView" destination="sKA-x4-66P" id="e1W-r6-PVg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ubX-SF-zi6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -599,6 +622,9 @@
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="underPageBackgroundColor">
+            <color red="0.70980392156862748" green="0.71764705882352942" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
