--- a/bsip/bsip/Base.lproj/Main.storyboard
+++ b/bsip/bsip/Base.lproj/Main.storyboard
@@ -238,7 +238,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sKA-x4-66P" customClass="SampleBufferVideoCallView" customModule="bsip" customModuleProvider="target">
                                 <rect key="frame" x="20" y="79" width="180" height="240"/>
-                                <color key="backgroundColor" systemColor="underPageBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="180" id="OJu-nK-mNW"/>
                                     <constraint firstAttribute="width" secondItem="sKA-x4-66P" secondAttribute="height" multiplier="3:4" id="S1e-fa-JFN"/>
@@ -259,19 +259,59 @@
                                     <action selector="endCall:" destination="v2H-k9-GkB" eventType="touchUpInside" id="sSb-9E-5Q8"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mf0-FH-CVX">
+                                <rect key="frame" x="20" y="644.66666666666663" width="94" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="QRl-ok-5bc"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="nmG-Ck-Auy"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="microphone_o" imagePlacement="top" title="麦克已开">
+                                    <fontDescription key="titleFontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="turnOnOffMicAct:" destination="YLf-d2-nH1" eventType="touchUpInside" id="nZG-fg-ca0"/>
+                                    <action selector="turnOnOffMicAct:" destination="v2H-k9-GkB" eventType="touchUpInside" id="z7K-sb-Pcw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PO9-tc-qkc">
+                                <rect key="frame" x="269" y="644.66666666666663" width="104" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="UUU-t4-vnP"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="ZQy-vw-TKd"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="speaker_c" imagePlacement="top" title="扬声器已关">
+                                    <fontDescription key="titleFontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="16"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="turnOnOffSpeaker:" destination="YLf-d2-nH1" eventType="touchUpInside" id="SI7-ua-eQc"/>
+                                    <action selector="turnOnOffSpeaker:" destination="v2H-k9-GkB" eventType="touchUpInside" id="vmf-w8-mn4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="RxM-eO-1Vf"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="sKA-x4-66P" firstAttribute="leading" secondItem="RxM-eO-1Vf" secondAttribute="leading" constant="20" id="1Dg-1R-HF0"/>
                             <constraint firstItem="RxM-eO-1Vf" firstAttribute="bottom" secondItem="ZCv-yU-3q6" secondAttribute="bottom" constant="80" id="2TS-vf-Pbs"/>
+                            <constraint firstItem="ZCv-yU-3q6" firstAttribute="centerY" secondItem="PO9-tc-qkc" secondAttribute="centerY" id="AAk-tD-9ve"/>
                             <constraint firstItem="ZCv-yU-3q6" firstAttribute="centerX" secondItem="8bZ-wb-sg2" secondAttribute="centerX" id="Bi3-eo-KMQ"/>
+                            <constraint firstItem="ZCv-yU-3q6" firstAttribute="centerY" secondItem="Mf0-FH-CVX" secondAttribute="centerY" id="FwU-2I-YHU"/>
+                            <constraint firstItem="PO9-tc-qkc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZCv-yU-3q6" secondAttribute="trailing" constant="8" symbolic="YES" id="HWI-gf-gdg"/>
+                            <constraint firstItem="ZCv-yU-3q6" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Mf0-FH-CVX" secondAttribute="trailing" constant="8" symbolic="YES" id="IFx-XN-L0R"/>
+                            <constraint firstItem="RxM-eO-1Vf" firstAttribute="trailing" secondItem="PO9-tc-qkc" secondAttribute="trailing" constant="20" id="Woo-iD-c9R"/>
                             <constraint firstItem="sKA-x4-66P" firstAttribute="top" secondItem="RxM-eO-1Vf" secondAttribute="top" constant="20" id="qCX-ow-hvJ"/>
+                            <constraint firstItem="Mf0-FH-CVX" firstAttribute="leading" secondItem="RxM-eO-1Vf" secondAttribute="leading" constant="20" id="zxZ-I4-izm"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xQt-dn-OlU"/>
                     <connections>
                         <outlet property="backGroundVideoView" destination="8bZ-wb-sg2" id="FIw-Pc-bA7"/>
+                        <outlet property="micPhoneBtn" destination="Mf0-FH-CVX" id="SLM-IM-hOQ"/>
+                        <outlet property="speakerBtn" destination="PO9-tc-qkc" id="eOa-Qg-mUo"/>
                         <outlet property="topFrontVideoView" destination="sKA-x4-66P" id="e1W-r6-PVg"/>
                     </connections>
                 </viewController>
@@ -622,9 +662,6 @@
         </systemColor>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="underPageBackgroundColor">
-            <color red="0.70980392156862748" green="0.71764705882352942" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
